--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,7 @@ body {
   padding: 3em 0; }
 
 main {
-  background: whitesmoke;
-  height: 600px; }
+  background: whitesmoke; }
 
 #data {
   width: 100%;
