--- a/css/style.css
+++ b/css/style.css
@@ -18,19 +18,10 @@ body {
   padding: 3em 0; }
 
 main {
+  font-size: 0.8em;
+  line-height: 1.2em;
+  color: rgba(0, 0, 0, 0.5);
   background: whitesmoke; }
-
-#data {
-  width: 100%;
-  flex: 2; }
-
-#neurons {
-  width: 100%;
-  flex: 5; }
-
-#output {
-  width: 100%;
-  flex: 4; }
 
 @media screen and (min-device-width: 1200px) and (max-device-width: 1600px) {
   html,
@@ -83,10 +74,10 @@ header {
   color: white;
   padding: 1.5rem 0;
   background: #f0f0f0;
-  background: -webkit-linear-gradient(left, #7441B2, #66389d);
-  background: -o-linear-gradient(right, #7441B2, #66389d);
-  background: -moz-linear-gradient(right, #7441B2, #66389d);
-  background: linear-gradient(to right, #7441B2, #66389d); }
+  background: -webkit-linear-gradient(left, #311b92, #4527a0);
+  background: -o-linear-gradient(right, #311b92, #4527a0);
+  background: -moz-linear-gradient(right, #311b92, #4527a0);
+  background: linear-gradient(to right, #311b92, #4527a0); }
   header h1 {
     margin-bottom: 0rem;
     letter-spacing: 0.2rem; }
@@ -114,8 +105,18 @@ header {
 #iterations {
   font-size: 1.4rem; }
 
-.main h4 {
-  text-transform: uppercase; }
+.data-thumb {
+  width: 50px;
+  height: auto;
+  padding: 10px 0; }
+
+h4 {
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, 0.9);
+  margin-bottom: 40px; }
+
+#neurons h4 {
+  margin-bottom: 0px; }
 
 .control-menu {
   font-family: inherit;
@@ -131,13 +132,18 @@ header {
 .control-menu > option {
   font-weight: 300; }
 
+.awesome-font-isnt-so-awesome {
+  position: absolute;
+  top: 14px;
+  left: 22px; }
+
 .circular-raised-button {
+  position: relative;
   display: block;
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 50%;
-  background: #B2B032;
-  display: flex;
+  background: #ffff00;
   justify-content: center;
   align-items: center;
   box-shadow: 0 0.1rem 0.2rem 0 rgba(0, 0, 0, 0.26); }
@@ -146,8 +152,7 @@ header {
     box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.26);
     transition: box-shadow 0.3s ease-in-out; }
   .circular-raised-button i {
-    position: relative;
-    color: white; }
+    color: rgba(0, 0, 0, 0.6); }
 
 .circular-icon-button {
   display: block;
@@ -158,24 +163,28 @@ header {
   display: flex;
   justify-content: center;
   align-items: center; }
+  .circular-icon-button i {
+    color: rgba(0, 0, 0, 0.6); }
   .circular-icon-button:hover {
     background: rgba(0, 0, 0, 0.1);
     cursor: pointer; }
-  .circular-icon-button i {
-    position: relative;
-    color: rgba(0, 0, 0, 0.7); }
 
 .big {
   width: 3rem;
   height: 3rem; }
 
-#sankey {
-  float: left; }
+#data {
+  width: 100%;
+  flex: 2;
+  margin-right: 1.5em; }
 
-#myCanvas {
-  float: left; }
+#neurons {
+  width: 100%;
+  flex: 5;
+  margin-right: 1.5em; }
 
-#heatmap {
-  float: left; }
+#output {
+  width: 100%;
+  flex: 4; }
 
 /*# sourceMappingURL=style.css.map */
