--- a/css/style.css
+++ b/css/style.css
@@ -105,18 +105,33 @@ header {
 #iterations {
   font-size: 1.4rem; }
 
+#data-thumb-gallery {
+  margin-top: 1rem; }
+
 .data-thumb {
   width: 50px;
   height: auto;
-  padding: 10px 0; }
+  margin: 0 7px 7px 0;
+  opacity: 0.5;
+  border: 3px solid transparent;
+  border-radius: 5px; }
+
+.data-thumb:hover {
+  border: 3px solid rgba(0, 0, 0, 0.5); }
+
+.selected {
+  opacity: 1;
+  border: 3px solid rgba(0, 0, 0, 0.8); }
 
 h4 {
   text-transform: uppercase;
   color: rgba(0, 0, 0, 0.9);
-  margin-bottom: 40px; }
+  margin-bottom: 1rem; }
 
 #neurons h4 {
-  margin-bottom: 0px; }
+  margin-bottom: 0px;
+  position: absolute;
+  left: 40px; }
 
 .control-menu {
   font-family: inherit;
@@ -132,10 +147,15 @@ h4 {
 .control-menu > option {
   font-weight: 300; }
 
-.awesome-font-isnt-so-awesome {
+.font-awesome-isnt-so-awesome {
   position: absolute;
   top: 14px;
   left: 22px; }
+
+.font-awesome-isnt-so-awesome2 {
+  position: absolute;
+  top: 14px;
+  left: 20px; }
 
 .circular-raised-button {
   position: relative;
@@ -173,22 +193,52 @@ h4 {
   width: 3rem;
   height: 3rem; }
 
-.show {
-  opacity:1;
-  visibility: visible;
-}
+.small {
+  margin-top: 0.2rem;
+  margin-bottom: 0.4rem;
+  width: 1.8rem;
+  height: 1.8rem; }
 
-.hide {
-  opacity:0;
-  visibility: hidden;
-}
+.show-bg {
+  background: rgba(0, 0, 0, 0.025); }
+
+.add-remove-controls {
+  display: flex; }
+
+ul {
+  list-style: none;
+  max-width: 680px; }
+
+.net-controls {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.layer-controls {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.neuron-controls {
+  display: flex; }
+  .neuron-controls li {
+    margin-left: 4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .neuron-controls li:first-child {
+    margin-left: 0; }
+  .neuron-controls .hide {
+    display: none; }
 
 #data {
   width: 100%;
+  min-width: 130px;
   flex: 2;
   margin-right: 1.5em; }
 
 #neurons {
+  position: relative;
   width: 100%;
   flex: 5;
   margin-right: 1.5em; }
