--- a/style.css
+++ b/style.css
@@ -43,8 +43,9 @@ h2 {
   line-height: 3.25rem; }
 
 h3 {
+  margin-top: 1.5rem;
   font-size: 1.625rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0.75rem;
   line-height: 2.4375rem; }
 
 p {
@@ -96,6 +97,7 @@ header {
     color: rgba(0, 0, 0, 0.87);
     font-size: 0.8rem;
     line-height: 1rem;
+    margin-top: 0;
     margin-bottom: 0.2rem; }
 
 .player-controls {
@@ -246,5 +248,48 @@ ul {
 #output {
   width: 100%;
   flex: 4; }
+
+footer {
+  margin-top: 2rem;
+  padding: 2rem 0;
+  font-size: 0.8rem;
+  background: #f0f0f0;
+  background: -webkit-linear-gradient(left, #311b92, #4527a0);
+  background: -o-linear-gradient(right, #311b92, #4527a0);
+  background: -moz-linear-gradient(right, #311b92, #4527a0);
+  background: linear-gradient(to right, #311b92, #4527a0);
+  color: rgba(255, 255, 255, 0.8); }
+
+a:link {
+  color: white;
+  text-decoration: none; }
+
+a:visited {
+  color: white; }
+
+a:hover {
+  color: white; }
+
+.social a, svg {
+  display: inline-block; }
+
+.social svg {
+  vertical-align: middle;
+  height: 20px;
+  width: 20px;
+  fill: white; }
+
+.social svg:hover {
+  border-radius: 100%;
+  fill: #311b92;
+  background-color: white;
+  transform: scale(1.25);
+  transition: background-color 0.5s, transform 0.5s ease-out; }
+
+.social-links {
+  display: inline-block;
+  position: relative;
+  top: -2px;
+  margin: 0 3px; }
 
 /*# sourceMappingURL=style.css.map */
